im trying and nothing is working

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
   <title>inspire-me</title>
 </head>
 
-<body data-bs-theme="light">
+<body data-bs-theme="dark">
   <!-- SECTION -->
+
+  <!-- </div>
+  <img
+    src="https://plus.unsplash.com/premium_photo-1704546974012-78acde0d4905?q=80&w=1635&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    alt="eggs">
+  <div> -->
+
+
   <header>
     <nav class="navbar bg-codeworks text-light gap-2 px-2">
       <img src="./assets/img/logo.png" height="45" alt="" loading="lazy">
@@ -50,17 +58,18 @@
 
 
 
-        </v>
+
       </div>
-    </div>
 
   </main>
-
-  <footer class="text-bg-dark">
-    <div class="text-center">
-      <p class="mb-0"><small>Made with <i class="mdi mdi-heart text-pink"></i> by CodeWorks</small></p>
+  <footer>
+    <div class="clock">
+      <span class="clock-time">8:25</span>
+      <span class="clock-ampm">pm</span>
     </div>
   </footer>
+
+
 
   <!-- SECTION links for bootstrap, axios, and auth -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
