Ready for regrade

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <p>Not done todo <span id="notDoneTodo">0/</span></p>
         <form id="todoList">
-          <!-- <input type="checkbox" id="vehicle1" name="vehicle1" value="description">
+          <!-- <input type="checkbox" id="vehicle1" name="vehicle1" value="description" >
           <label for="vehicle1"> I have a bike</label><br>
           <div>
             <span onclick="app.TodosController.deleteTodo("${this.id}")" class="mdi mdi-delete-forever"></span>
@@ -63,9 +63,8 @@
 
   </main>
   <footer>
-    <div class="clock">
-      <span class="clock-time">8:25</span>
-      <span class="clock-ampm">pm</span>
+    <div id="clock" class="clock">
+      <!-- <div>clock</div> -->
     </div>
   </footer>
 
